<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of Shopping.
 * 
 * Shopping is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * Shopping is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with Shopping. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Shopping</string>
    <string name="no_lists">No lists</string>
    <string name="no_products">No products</string>
    <string name="add_list">Add list</string>
    <string name="preferences">Preferences</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="products">Products</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_item">Add item</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="total">Total</string>
    <string name="vibrate_key">vibrate</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary_on">Vibration on</string>
    <string name="vibrate_summary_off">Vibration off</string>
    <string name="add_products">Add products</string>
    <string name="add_new">Add new %s</string>
    <string name="confirmation_title">Confirm deletion</string>
    <string name="confirmation_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted">%s has been deleted successfully</string>
    <string name="item_created">%s has been created successfully</string>
    <string name="error_message">%s cannot be empty</string>
    <string name="update_item">Update %s</string>
    <string name="item_updated">%s has been updated successfully</string>
    <string name="remove">Remove</string>
    <string name="item_removed">%s has been removed successfully</string>

</resources>