<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of Shopping.
 * 
 * Shopping is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * Shopping is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with Shopping. If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/vibrate_key"
        android:summaryOff="@string/vibrate_summary_off"
        android:summaryOn="@string/vibrate_summary_on"
        android:title="@string/vibrate_title" />

    <ListPreference />

    <EditTextPreference />

</PreferenceScreen>