<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of Shopping.
 * 
 * Shopping is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * Shopping is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with Shopping. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/listName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/listDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/productName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/productDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number" />

    <Button
        android:id="@+id/addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item" />
</LinearLayout>